# RustAssist

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.ts  package-lock.json  package.json
config/: index.js
data/static-json/: items.json
docs/: commands.md  smart_devices.md
scripts/: process_rustlabs.js
services/license-api/: Dockerfile  README.md  alembic.ini  main.py  plans.json  pyproject.toml  requirements.txt
services/license-api/alembic/: env.py
services/license-api/app/: __init__.py  cli.py  config.py  database.py  main.py  models.py  schema_management.py  schemas.py  security.py  service.py
services/license-api/tests/: test_license_flow.py
src/commands/: activity.js  alarm.js  credentials.js  durability.js  license.js  map.js  market.js  offlinepattern.js  raidable.js  reset.js  voice.js  whois.js
src/discordEvents/: guildCreate.js  interactionCreate.js  messageCreate.js  ready.js
src/discordTools/: SetupAlarms.js  SetupGuildCategory.js  SetupStorageMonitors.js  SetupSwitches.js  discordButtons.js  discordEmbeds.js  discordMessages.js  discordModals.js  discordSelectMenus.js  discordVoice.js
src/handlers/: battlemetricsHandler.js  buttonHandler.js  discordCommandHandler.js  inGameCommandHandler.js  informationHandler.js  modalHandler.js  pollingHandler.js  smartSwitchGroupHandler.js  smartSwitchHandler.js  teamHandler.js
src/languages/: cs.json  de.json  en.json  es.json  fr.json  it.json  ko.json  pl.json  pt.json  ru.json  sv.json  tr.json
src/license/: LicenseApiClient.js  (+4 more)
tests/: battlemetricsAuth.test.js
(+32 files in other folders)
